--- a/metodo1.html
+++ b/metodo1.html
@@ -19,7 +19,7 @@
       <p><strong>R$8,00</strong></p>
       <p>Ideal para qualquer dúvida direta, seja sobre sentimentos, ações, pensamentos ou até um sim ou não simples.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20uma%20pergunta%20avulsa" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
