--- a/metodo2.html
+++ b/metodo2.html
@@ -19,7 +19,7 @@
       <p><strong>R$10,00</strong></p>
       <p>Mostra o momento, intenções e tendências amorosas de forma compacta.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20tres%20cartas%20do%20amor" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
