--- a/metodo3.html
+++ b/metodo3.html
@@ -19,7 +19,7 @@
       <p><strong>R$15,00</strong></p>
       <p>Uma leitura sobre você mesma: como as pessoas te veem, como você se vê e como você realmente é.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20espelho%20espelho%20meu" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
