--- a/metodo4.html
+++ b/metodo4.html
@@ -20,7 +20,7 @@
       <p>Uma leitura para decisões: o que acontece se você fizer tal coisa, e o que acontece se não fizer.  
       Um guia direto para suas escolhas.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20entre%20veus%20e%20caminhos" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
