--- a/metodo5.html
+++ b/metodo5.html
@@ -20,7 +20,7 @@
       <p>O momento da conexão, as forças ativas e o que influencia a relação agora.</p>
       
       <!-- Botão de agendamento -->
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20energia%20casal" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
