--- a/metodo6.html
+++ b/metodo6.html
@@ -20,7 +20,7 @@
       <p>Um panorâmico pra saber como o ex está, se pensa em voltar, se mudou as atitudes e etc.<br>
       (Tem direito a mais 2 perguntas sobre a tiragem.)</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20fofoca%20ex" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
