--- a/metodo7.html
+++ b/metodo7.html
@@ -20,7 +20,7 @@
       <p>Como a pessoa está nesse afastamento, se pretende se reaproximar, o futuro da conexão e o que gostaria de dizer para você.<br><br>
       (Direito a 3 perguntas com base na tiragem.)</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20templo%20afastados" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
