--- a/metodo9.html
+++ b/metodo9.html
@@ -19,7 +19,7 @@
       <p><strong>R$35,00</strong></p>
       <p>Ritual completo para harmonizar sua energia amorosa e atrair afinidades sentimentais. Inclui guia de práticas diárias e conselhos místicos.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20templo%20afrodite" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
