--- a/metodo10.html
+++ b/metodo10.html
@@ -19,7 +19,7 @@
       <p><strong>R$35,00</strong></p>
       <p>Revela obstáculos e oportunidades nos próximos 7 dias, na sua vida amorosa e pessoal, ajudando a tomar decisões mais conscientes.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20previsão%207dias" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
