--- a/metodo11.html
+++ b/metodo11.html
@@ -19,7 +19,7 @@
       <p><strong>R$40,00</strong></p>
       <p>Aprofundamento sobre algum assunto, com direito a mais 2 perguntas caso necessário.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20situação%20especifica%20aprofundamento" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
