--- a/metodo12.html
+++ b/metodo12.html
@@ -19,7 +19,7 @@
       <p><strong>R$50,00</strong></p>
       <p>Uma leitura completa sobbre o passado, presente e futuro de uma área de sua vida.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20tiragem%20completa%20uma%20area" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
