--- a/metodo13.html
+++ b/metodo13.html
@@ -19,7 +19,7 @@
       <p><strong>R$40,00</strong></p>
       <p>Uma análise profunda de todos os aspectos da sua vida amorosa e pessoal. Inclui respostas detalhadas e previsões energéticas.</p>
       
-      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20esse%20metodo" 
+      <a href="https://wa.me/5514997135880?text=Ola,%20vim%20do%20site,%20gostaria%20de%20agendar%20tiragem%20completa" 
          class="btn-agendar" target="_blank">
         💬 Agendar
       </a>
