--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -6,9 +6,9 @@
   <title>The Moon’s Letter 🌙</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<link rel="icon" href="logo.png">
-
+  <link rel="icon" href="logo.png">
 </head>
+
 <body>
   <div class="stars"></div>
   <div class="spider"></div>
@@ -38,7 +38,7 @@
       </div>
 
       <div class="card">
-        <img src="caminhos.png"Entre Véus e Caminhos">
+        <img src="caminhos.png" alt="Entre Véus e Caminhos">
         <a href="metodo4.html">4. Entre Véus e Caminhos — R$20,00</a>
       </div>
 
@@ -48,7 +48,7 @@
       </div>
 
       <div class="card">
-        <img src="fofoca.png"Fofoca de Ex">
+        <img src="fofoca.png" alt="Fofoca de Ex">
         <a href="metodo6.html">6. Fofoca de Ex — R$28,00</a>
       </div>
 
@@ -93,13 +93,13 @@
     ✨ “O tarô não revela o futuro, ele mostra o caminho.” — The Moon’s Letter 🌙
   </footer>
 
-  <!-- Botão flutuante do WhatsApp -->
-  <a href="https://wa.me/5514997135880?text=Olá!%20Quero%20agendar%20uma%20consulta" 
-     class="whatsapp-float" target="_blank">
-    💬 Agendar Consulta
-  </a>
+  <!-- Botões flutuantes -->
+  <div class="social-float">
+    <a href="https://wa.me/5514997135880?text=Olá!%20Quero%20agendar%20uma%20consulta" target="_blank" class="whatsapp">💬</a>
+    <a href="https://www.tiktok.com/@themoonsletter_" target="_blank" class="tiktok">🎵</a>
+    <a href="https://www.instagram.com/themoonsletter" target="_blank" class="instagram">📸</a>
+  </div>
 
-  <!-- Efeito de estrelas em movimento -->
   <script src="stars.js"></script>
 </body>
 </html>
